--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
-requests==2.25.1
-beautifulsoup4==4.9.3
-lxml==4.6.3
-tqdm==4.59.0
+category-encoders==2.2.2
+cycler==0.10.0
+dill==0.3.4
+et-xmlfile==1.1.0
+joblib==1.0.1
+kiwisolver==1.3.1
+matplotlib==3.4.2
+numpy==1.21.1
+openpyxl==3.0.7
+pandas==1.3.1
+patsy==0.5.1
+Pillow==8.3.1
+pyparsing==2.4.7
+python-dateutil==2.8.2
+pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.7.0
+six==1.16.0
+sqlparse==0.4.1
+statsmodels==0.12.2
+threadpoolctl==2.2.0
+xgboost==1.4.2
